Update prod api url

--- a/TODO.txt
+++ b/TODO.txt
@@ -36,3 +36,7 @@ nice move between photos
 cache thumbnails somehow 
 
 error when image is not found, downloaded
+
+check http 2.0
+
+thumb/photos gzip
