--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+BIG BUG: When checkbox with favourites is checked and there is no favourtie, there is error, or if in favrourites is nonexist photo
+
 globe in navbar - make it bigger
 
 selected thumb - border in around thumbsnpm start
@@ -40,3 +42,5 @@ check http 2.0
 thumb/photos gzip
 
 SEO
+
+no more photo navigation button disable
